<resources>
    <string name="app_name">Scrummy Retro</string>
    <string name="view_session">View Session</string>
    <string name="load_session">Load Saves</string>
    <string name="start_session">Start</string>
    <string name="vote_title">Vote</string>
    <string name="topic_entry">Topic Entry</string>
    <string name="start_voting">Start Voting</string>
    <string name="topic">Topic</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string-array name="categories_array">
        <item>Good</item>
        <item>Neutral</item>
        <item>Bad</item>
    </string-array>
    <string name="topic_title">Title</string>
    <string name="topic_votes">0</string>
    <string name="add_votes">+</string>
    <string name="sub_votes">-</string>
    <string name="topic_username">Username</string>
    <string name="new_session">New</string>
    <string name="scrummy">Scrummy Retro</string>
    <string name="continue_session">Continue / Join</string>
    <string name="current_topic">Current Topic</string>
    <string name="clock_goes_here">Clock Goes Here</string>
    <string name="actions">Actions</string>
    <string name="next_topic">Next Topic</string>
    <string name="date">Date</string>
    <string name="colon">:</string>
    <string name="category">Category</string>
    <string name="category_type">Category</string>
    <string name="save_and_quit_button">Save and Quit</string>
    <string name="sessionviewpopupmenu">sessionViewPopupMenu</string>
    <string name="save">Save</string>
    <string name="quit">Quit</string>
    <string name="delete">Delete</string>
    <string name="next_topic_button">Next: </string>
    <string name="new_dialogue_warning">There is currently a session in progress.  Would you like
        to proceed anyway?</string>
    <string name="votes">Votes:</string>
    <string name="username">Name:</string>
    <string name="rename">Rename</string>
    <string name="previous_button">Previous</string>
    <string name="cancel">Cancel</string>
    <string name="session_title">Session Title</string>
    <string name="textview">TextView</string>
    <string name="dialog_warning_1">WARNING: There is currently a session in progress.</string>
    <string name="dialog_warning_2">Starting a new session will cause the prior session to be discarded.</string>
    <string name="dialog_rename">Rename the session.</string>
    <string name="three_dot_menu">⋮</string>
    <string name="timer_value">0:00</string>
    <string name="rewind">Rewind</string>
    <string name="play_pause">Play/Pause</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="toggle_alarm">Toggle Alarm</string>
    <string name="dialog_new_name">Name the new session</string>
    <string name="dialog_new_topic">New Topic</string>
    <string name="edit">Edit</string>
    <string name="title_activity_load">Load Saves</string>
    <string name="title_activity_view">View Retrospective</string>
    <string name="title_activity_vote">Vote</string>
    <string name="title_activity_topic">Add Topics</string>
    <string name="title_activity_sprint">Discuss</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="timer_duration">Timer Duration</string>
    <string name="dialog_change_time">Change Timer Duration</string>
    <string-array name="time_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string-array name="pref_sync_load_titles">
        <item>Cloud</item>
        <item>Local</item>
    </string-array>
    <string-array name="pref_sync_load_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_timer_settings">Timer</string>
    <string name="pref_title_timer_minutes">Timer Minutes</string>
    <string name="pref_title_timer_seconds">Timer Seconds</string>
    <string name="pref_title_ringtone">Alarm Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="brief_overview">Scrummy Retro is a tool that facilitates the Retrospective meetings which are a part of the Scrum Software Development Methodology.</string>
    <string name="contact_information">Contact us at
        threeguys19@gmail.com</string>
    <string name="description">Version 1.0</string>
    <string name="logo_description">Picture of Scrummy Retro Logo</string>
    <string name="scrummy_short_description">Scrum Retrospective Meeting Tool</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="help_team_login">How do I set up a team?</string>
    <string name="help_team_login_1">Create one account to represent the whole team. This account will hold the team\'s cloud meeting data. Each team member must use this account to host or join meetings.</string>
    <string name="help_start_meeting">How do I start a meeting?</string>
    <string name="help_start_meeting_1">Have the Scrum Master or host click the \"NEW\" button. This will start a new meeting on the server. To get the rest of the team to join, have them press the \"CONTINUE / JOIN\" button. This will bring each of them into the online meeting.</string>
    <string name="help_start_meeting_2">WARNING: If a team member clicks the \"NEW\" button after a meeting has started, their new meeting will replace any currently running meeting.</string>
    <string name="help_run_meeting">How do meetings work?</string>
    <string name="help_run_meeting_1">There are three stages to the meeting: Topic Entry, Vote, and Discussion. Each team member has the ability to progress the meeting to the next stage by simply pressing the button found at the bottom of the screen. When one member presses the button, the entire team will automatically progress to the next stage. At the end of the Discussion stage, only one team member should press the \"SAVE AND EXIT\" button. When it is pressed, the meeting will be saved to the cloud and every member will exit to the main menu.</string>
    <string name="help_save_meeting">How do I save my meeting data?</string>
    <string name="help_save_meeting_1">By default, every meeting will be saved to the team\'s cloud data, but not locally to the device. You can edit this in Settings under Data and Sync.</string>
    <string name="help_load_saves">How do I view my saved meeting data?</string>
    <string name="help_load_saves_1">Click on the \"LOAD SAVES\" button in the main menu. By default the list of saved meetings will be loaded from the team\'s cloud data. This can be edited in Settings under Data and Sync. Once there, you can switch between seeing local saves and cloud saves by interacting with the two buttons.</string>
    <string name="help_load_saves_2">To view a meeting\'s data, simply click on the desired meeting title. This will bring up all of the saved data for that meeting.</string>
    <string name="help_load_saves_3">Each meeting entry can be renamed or deleted.</string>
    <string name="help_run_meeting_2">The Topic Entry stage is where every topic of discussion should be entered in. Each topic can hold a title, the name of the one who created it, and a category ranking \"Good\", \"Neutral\", or \"Bad\". You can have your name automatically inserted when creating a new topic by putting your name in for the \"Display Name\" setting under General Settings.</string>
    <string name="help_run_meeting_3">The Vote stage is where the team votes on which topics to discuss first. There is no limit for the number of votes each person can contribute. If there is a tie in votes, preference will be given to \"Bad\" topics first, then \"Neutral\" topics, then \"Good\" topics.</string>
    <string name="help_run_meeting_4">The Discussion stage will display each topic one at a time starting with the one with the most votes. By default the timer is set to 5 minutes each topic, but the time can be edited while in this stage or in Settings under Timer. Notes from the discussion should be added to the textbox for each topic.</string>
</resources>