<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/_helpTeamLoginHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/help_team_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/_helpTeamLogin1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/help_team_login_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/_helpTeamLoginHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/_helpTeamLoginHeaderTextView" />

            <TextView
                android:id="@+id/_helpStartMeetingHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/help_start_meeting"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/_helpTeamLogin1TextView" />

            <TextView
                android:id="@+id/_helpStartMeeting1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/help_start_meeting_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/_helpTeamLoginHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/_helpStartMeetingHeaderTextView" />

            <TextView
                android:id="@+id/_helpStartMeeting2TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/help_start_meeting_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/_helpTeamLoginHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/_helpStartMeeting1TextView" />

            <TextView
                android:id="@+id/_helpRunMeetingHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/help_run_meeting"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/_helpStartMeeting2TextView" />

            <TextView
                android:id="@+id/_helpRunMeeting1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/help_run_meeting_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/_helpTeamLoginHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/_helpRunMeetingHeaderTextView" />

            <TextView
                android:id="@+id/_helpRunMeeting2TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/help_run_meeting_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/_helpTeamLoginHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/_helpRunMeeting1TextView" />

            <TextView
                android:id="@+id/_helpRunMeeting3TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/help_run_meeting_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/_helpTeamLoginHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/_helpRunMeeting2TextView" />

            <TextView
                android:id="@+id/_helpRunMeeting4TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/help_run_meeting_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/_helpTeamLoginHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/_helpRunMeeting3TextView" />

            <TextView
                android:id="@+id/_helpSaveMeetingHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/help_save_meeting"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/_helpRunMeeting1TextView" />

            <TextView
                android:id="@+id/_helpSaveMeeting1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/help_save_meeting_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/_helpTeamLoginHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/_helpSaveMeetingHeaderTextView" />

            <TextView
                android:id="@+id/_helpLoadSavesHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/help_load_saves"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/_helpSaveMeeting1TextView" />

            <TextView
                android:id="@+id/_helpLoadSaves1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/help_load_saves_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/_helpTeamLoginHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/_helpLoadSavesHeaderTextView" />

            <TextView
                android:id="@+id/_helpLoadSaves2TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/help_load_saves_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/_helpTeamLoginHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/_helpLoadSaves1TextView" />

            <TextView
                android:id="@+id/_helpLoadSaves3TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/help_load_saves_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/_helpTeamLoginHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/_helpLoadSaves2TextView" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>