<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <ListPreference
        android:defaultValue="5"
        android:entries="@array/time_array"
        android:entryValues="@array/time_array"
        android:key="timer_minutes"
        android:title="@string/pref_title_timer_minutes" />

    <ListPreference
        android:defaultValue="00"
        android:entries="@array/time_array"
        android:entryValues="@array/time_array"
        android:key="timer_seconds"
        android:title="@string/pref_title_timer_seconds" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="alarm_ringtone"
        android:ringtoneType="alarm"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked.
    <SwitchPreference
        android:defaultValue="true"
        android:key="alarm_vibrate"
        android:title="@string/pref_title_vibrate" />
    -->

</PreferenceScreen>
